--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: sans-serif; background: #0b0e14; color: #fff; padding-bottom: 90px; }
-        .nav-bar { position: fixed; bottom: 0; left: 0; right: 0; background: #151921; display: flex; padding: 15px 0; border-top: 1px solid #1f2937; }
+        body { font-family: -apple-system, sans-serif; background: #0b0e14; color: #fff; padding-bottom: 90px; }
+        .nav-bar { position: fixed; bottom: 0; left: 0; right: 0; background: #151921; display: flex; padding: 15px 0; border-top: 1px solid #1f2937; z-index: 1000; }
         .nav-item { flex: 1; text-align: center; color: #6b7280; cursor: pointer; font-size: 14px; }
         .nav-item.active { color: #0088cc; font-weight: bold; }
         .page { display: none; padding: 20px; }
@@ -20,7 +20,7 @@
         .btn { width: 100%; padding: 10px; border: none; border-radius: 8px; font-weight: bold; cursor: pointer; margin-top: 5px; }
         .btn-buy { background: #0088cc; color: white; }
         .btn-success { background: #10b981; color: white; }
-        input { width: 100%; padding: 12px; background: #1f2937; border: 1px solid #333; border-radius: 8px; color: #fff; margin-bottom: 10px; }
+        input { width: 100%; padding: 12px; background: #1f2937; border: 1px solid #333; border-radius: 8px; color: #fff; margin-bottom: 10px; outline: none; }
         .balance-card { background: linear-gradient(135deg, #0088cc, #004466); padding: 20px; border-radius: 16px; margin-bottom: 20px; text-align: center; }
     </style>
 </head>
@@ -28,21 +28,8 @@
 
     <div id="marketPage" class="page active">
         <h2>🛒 Маркет</h2>
-        <div style="margin-bottom: 15px; color: #0088cc;">Ваш баланс: <span id="m-balance">0.00</span> TON</div>
-        <div class="items-grid">
-            <div class="item-card">
-                <div class="item-image" style="display:flex; align-items:center; justify-content:center;">AK-47</div>
-                <div style="font-size:12px;">AK-47 | Redline</div>
-                <div style="color:#0088cc; margin:5px 0;">5 TON</div>
-                <button class="btn btn-buy" onclick="buyItem('AK-47 | Redline', 5)">Купить</button>
-            </div>
-            <div class="item-card">
-                <div class="item-image" style="display:flex; align-items:center; justify-content:center;">M4A4</div>
-                <div style="font-size:12px;">M4A4 | Howl</div>
-                <div style="color:#0088cc; margin:5px 0;">150 TON</div>
-                <button class="btn btn-buy" onclick="buyItem('M4A4 | Howl', 150)">Купить</button>
-            </div>
-        </div>
+        <div style="margin: 10px 0; color: #0088cc; font-weight: bold;">Баланс: <span id="m-balance">0.00</span> TON</div>
+        <div class="items-grid" id="marketGrid"></div>
     </div>
 
     <div id="sellPage" class="page">
@@ -55,13 +42,13 @@
         <div class="balance-card">
             <p style="font-size: 14px; opacity: 0.8;">Текущий баланс</p>
             <h1 id="p-balance">0.00 TON</h1>
-            <button class="btn btn-success" style="margin-top:10px; width: 150px;" onclick="depositFunds()">➕ Пополнить</button>
+            <button class="btn btn-success" style="margin-top:10px; width: 160px;" onclick="depositFunds()">➕ Пополнить</button>
         </div>
 
         <div style="background: #151921; padding: 15px; border-radius: 12px;">
-            <p style="font-size:12px; color:#6b7280;">SteamID64:</p>
+            <p style="font-size:12px; color:#6b7280; margin-bottom:5px;">SteamID64:</p>
             <input type="text" id="steamIdInput" placeholder="7656119...">
-            <p style="font-size:12px; color:#6b7280;">Trade URL:</p>
+            <p style="font-size:12px; color:#6b7280; margin-bottom:5px;">Trade URL:</p>
             <input type="text" id="tradeUrlInput" placeholder="https://steamcommunity.com/tradeoffer/new/...">
             <button class="btn btn-buy" onclick="saveData()">💾 Сохранить настройки</button>
             <div id="ton-connect-button" style="margin-top:20px; display:flex; justify-content:center;"></div>
@@ -77,8 +64,6 @@
     <script>
         const API_URL = "https://stattrakmrkt.onrender.com";
         const tg = window.Telegram.WebApp;
-        
-        // Инициализация баланса
         let userBalance = parseFloat(localStorage.getItem('balance')) || 0;
 
         const tonConnectUI = new TON_CONNECT_UI.TonConnectUI({
@@ -98,74 +83,86 @@
             document.getElementById(p + 'Page').classList.add('active');
             document.getElementById('n-' + p).classList.add('active');
             if(p === 'sell') loadInv();
+            if(p === 'market') loadMarket();
             updateBalanceUI();
         }
 
         function saveData() {
             localStorage.setItem('sid', document.getElementById('steamIdInput').value);
             localStorage.setItem('turl', document.getElementById('tradeUrlInput').value);
-            tg.showAlert("Данные сохранены!");
+            tg.showAlert("Данные успешно сохранены!");
         }
 
-        // Логика покупки со счета
-        function buyItem(name, price) {
-            if (userBalance >= price) {
-                userBalance -= price;
-                updateBalanceUI();
-                tg.showConfirm(`Вы купили ${name}! Отправить скин на ваш Trade URL?`, (ok) => {
-                    if(ok) alert("Заявка на вывод скина создана!");
-                });
-            } else {
-                tg.showAlert("Недостаточно TON на балансе! Пополните счет в профиле.");
-            }
-        }
-
-        // Логика пополнения (через кошелек)
         async function depositFunds() {
-            const amount = prompt("Введите сумму пополнения в TON:", "1.0");
+            const amount = prompt("Сумма пополнения (TON):", "1.0");
             if (!amount || isNaN(amount)) return;
-
             const transaction = {
                 validUntil: Math.floor(Date.now() / 1000) + 60,
                 messages: [{
-                    address: "UQByN_...ТВОЙ_АДРЕС...", // ЗАМЕНИ НА СВОЙ АДРЕС TON
+                    address: "ТВОЙ_АДРЕС_КОШЕЛЬКА", // ЗАМЕНИ НА СВОЙ
                     amount: (parseFloat(amount) * 1000000000).toString()
                 }]
             };
-
             try {
                 await tonConnectUI.sendTransaction(transaction);
-                // В реальном боте мы бы ждали подтверждения от блокчейна,
-                // но для теста сразу зачислим баланс
                 userBalance += parseFloat(amount);
                 updateBalanceUI();
-                tg.showAlert("Баланс успешно пополнен!");
-            } catch(e) {
-                tg.showAlert("Ошибка транзакции");
-            }
+                tg.showAlert("Баланс пополнен!");
+            } catch(e) { tg.showAlert("Отмена"); }
         }
 
         async function loadInv() {
             const sid = localStorage.getItem('sid');
             const grid = document.getElementById('inventoryGrid');
-            if(!sid) return;
-            grid.innerHTML = "Загрузка...";
+            const status = document.getElementById('status');
+            if(!sid) { status.innerText = "Укажите SteamID"; return; }
+            status.innerText = "Загрузка...";
+            grid.innerHTML = "";
             try {
                 const r = await fetch(`${API_URL}/api/inventory/${sid}`);
                 const d = await r.json();
+                status.innerText = "";
                 grid.innerHTML = d.descriptions.map(i => `
                     <div class="item-card">
-                        <img src="https://community.cloudflare.steamstatic.com/economy/image/${i.icon_url}/120x80" class="item-image">
-                        <div style="font-size:10px;">${i.market_name}</div>
+                        <img src="https://community.cloudflare.steamstatic.com/economy/image/${i.icon_url}/120x80" class="item-image" loading="lazy">
+                        <div style="font-size:10px; height:24px; overflow:hidden;">${i.market_name}</div>
                         <button class="btn btn-success" style="font-size:10px;">Продать</button>
                     </div>
                 `).join('');
-            } catch(e) { grid.innerHTML = "Ошибка"; }
+            } catch(e) { status.innerText = "Ошибка"; }
+        }
+
+        function loadMarket() {
+            const grid = document.getElementById('marketGrid');
+            const items = [
+                { name: 'AK-47 | Redline', price: 5, h: '-9a81dlWLwJ2UUGcVs_nsVtzdOEdtWwKGZZLQHTxDZ7I56KU0Zwwo4NUX4oFJZEHLbXH5ApeO4YmlhxYQknCRvCo04DEVlxkKgpot7HxfDhjxszJemkV09-5lpKKqPrxN7LEmyVQ7MEpiLuSrYmnjQO3-UdvZG_0LYGddlQ7Mg7S_1C8xue9h5Pu75iY1zI97bhKshWi' },
+                { name: 'M4A4 | Howl', price: 150, h: '-9a81dlWLwJ2UUGcVs_nsVtzdOEdtWwKGZZLQHTxDZ7I56KU0Zwwo4NUX4oFJZEHLbXH5ApeO4YmlhxYQknCRvCo04DEVlxkKgpou-6kejhjxszFJQJD_9W7m5a0mvLwOq7cqWdQ-sJ0teXI8oThxlKx-Uc9Zjv6cNPBdgU4YV3Q_lG9ye_ng5Pu6pXLwXVn7yEq4iuMgVXp1lNdQs2Y' }
+            ];
+            grid.innerHTML = items.map(i => `
+                <div class="item-card">
+                    <img src="https://community.cloudflare.steamstatic.com/economy/image/${i.h}/120x80" class="item-image" loading="lazy">
+                    <div style="font-size:11px; font-weight:bold;">${i.name}</div>
+                    <div style="color:#0088cc; margin:5px 0;">${i.price} TON</div>
+                    <button class="btn btn-buy" onclick="buyItem('${i.name}', ${i.price})">Купить</button>
+                </div>
+            `).join('');
+        }
+
+        function buyItem(name, price) {
+            if (userBalance >= price) {
+                userBalance -= price;
+                updateBalanceUI();
+                tg.showAlert(`Успешно! ${name} куплен.`);
+            } else {
+                tg.showAlert("Недостаточно TON!");
+            }
         }
 
         document.getElementById('steamIdInput').value = localStorage.getItem('sid') || '';
         document.getElementById('tradeUrlInput').value = localStorage.getItem('turl') || '';
+        loadMarket();
         updateBalanceUI();
     </script>
 </body>
 </html>
+
