--- a/index.html
+++ b/index.html
@@ -109,9 +109,18 @@
     </div>
 
     <nav class="nav-bar">
-        <div class="nav-item active" id="n-market" onclick="switchPage('market')">Маркет</div>
-        <div class="nav-item" id="n-sell" onclick="switchPage('sell')">Продать</div>
-        <div class="nav-item" id="n-profile" onclick="switchPage('profile')">Профиль</div>
+        <div class="nav-item active" id="n-market" onclick="switchPage('market')">
+            <i>🛒</i>
+            <span>Маркет</span>
+        </div>
+        <div class="nav-item" id="n-sell" onclick="switchPage('sell')">
+            <i>💰</i>
+            <span>Продать</span>
+        </div>
+        <div class="nav-item" id="n-profile" onclick="switchPage('profile')">
+            <i>👤</i>
+            <span>Профиль</span>
+        </div>
     </nav>
 
     <script>
@@ -222,5 +231,6 @@
     </script>
 </body>
 </html>
+
 
 
