--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
 
     <div id="profilePage" class="page">
         <div class="balance-card">
+            <button class="btn btn-buy" style="background: #2d3748; margin-bottom: 15px;" onclick="showMyItems()">📦 Мои товары на продаже</button>
+<div id="myItemsList" class="items-grid" style="margin-top: 10px;"></div>
             <p style="font-size: 14px; opacity: 0.8;">Баланс</p>
             <h1 id="p-balance">0.00 TON</h1>
             <button class="btn btn-success" style="margin-top:10px; width: 160px;" onclick="depositFunds()">➕ Пополнить</button>
@@ -231,6 +233,7 @@
     </script>
 </body>
 </html>
+
 
 
 
