--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
    <style>
     * { margin: 0; padding: 0; box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
     body { font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; background: #0b0e14; color: #fff; overflow-x: hidden; }
+       /* Цвета редкости */
+.rarity-common { border-bottom: 4px solid #b0c3d9 !important; } /* Ширпотреб */
+.rarity-uncommon { border-bottom: 4px solid #5e98d9 !important; } /* Промышленное */
+.rarity-rare { border-bottom: 4px solid #4b69ff !important; } /* Армейское */
+.rarity-mythical { border-bottom: 4px solid #8847ff !important; } /* Запрещенное */
+.rarity-legendary { border-bottom: 4px solid #d32ce6 !important; } /* Засекреченное */
+.rarity-ancient { border-bottom: 4px solid #eb4b4b !important; } /* Тайное */
+.rarity-immortal { border-bottom: 4px solid #e4ae39 !important; } /* Золотое/Ножи */
 
     /* Анимация переключения страниц */
     .page { 
@@ -275,6 +283,7 @@ async function removeItem(id) {
     </script>
 </body>
 </html>
+
 
 
 
