--- a/index.html
+++ b/index.html
@@ -203,13 +203,16 @@
             try {
                 const r = await fetch(`${API_URL}/api/inventory/${sid}`);
                 const d = await r.json();
-                grid.innerHTML = d.descriptions.map(i => `
-                    <div class="item-card">
-                        <img src="https://community.cloudflare.steamstatic.com/economy/image/${i.icon_url}/120x80" class="item-image">
-                        <div style="font-size:10px; height:24px; overflow:hidden;">${i.market_name}</div>
-                        <button class="btn btn-success" onclick="listItemForSale('${i.market_name}', '${i.icon_url}')">Продать</button>
-                    </div>
-                `).join('');
+               grid.innerHTML = d.descriptions.map(i => {
+    const rarityClass = getRarityClass(i); // Определяем цвет
+    return `
+        <div class="item-card ${rarityClass}">
+            <img src="https://community.cloudflare.steamstatic.com/economy/image/${i.icon_url}/120x80" class="item-image">
+            <div style="font-size:10px; height:24px; overflow:hidden;">${i.market_name}</div>
+            <button class="btn btn-success" style="font-size:10px;" onclick="listItemForSale('${i.market_name}', '${i.icon_url}', '${rarityClass}')">Продать</button>
+        </div>
+    `;
+}).join('');
             } catch(e) { grid.innerHTML = "Ошибка"; }
         }
 
@@ -298,6 +301,7 @@ async function removeItem(id) {
     </script>
 </body>
 </html>
+
 
 
 
