--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@
         const res = await fetch(`${API_URL}/api/market`);
         const items = await res.json();
         grid.innerHTML = items.map(i => `
-            <div class="item-card ${i.rarity || ''}"> <img src="https://community.cloudflare.steamstatic.com/economy/image/${i.hash}/120x80" class="item-image">
+           
+<div class="item-card ${i.rarity ? i.rarity : ''}"> <img src="https://community.cloudflare.steamstatic.com/economy/image/${i.hash}/120x80" class="item-image">
                 <div style="font-size:11px; font-weight:bold;">${i.name}</div>
                 <div style="color:#0088cc; margin:5px 0;">${i.price} TON</div>
                 <button class="btn btn-buy" onclick="buyItem('${i.name}', ${i.price})">Купить</button>
@@ -306,6 +307,7 @@ async function removeItem(id) {
     </script>
 </body>
 </html>
+
 
 
 
