--- a/index.html
+++ b/index.html
@@ -372,8 +372,10 @@ async function removeItem(id) {
     });
 }
     </script>
+    <div id="toast-container" style="position: fixed; bottom: 80px; left: 50%; transform: translateX(-50%); z-index: 9999; pointer-events: none;"></div>
 </body>
 </html>
+
 
 
 
